--- a/flyway.conf
+++ b/flyway.conf
@@ -3,5 +3,5 @@ flyway.url=jdbc:mysql://localhost:3306/info_dev?autoreconnect=true
 flyway.user=admin
 flyway.password=admin
 flyway.schemas=info_dev
-flyway.locations=filesystem:src/main/resources/sql/migrations
+flyway.locations=filesystem:./workspace/flywaymysql/src/main/resources/sql/migrations
 flyway.repeatableSqlMigrationPrefix=R
