--- a/flyway.conf
+++ b/flyway.conf
@@ -2,6 +2,6 @@ flyway.driver=com.mysql.jdbc.Driver
 flyway.url=jdbc:mysql://localhost:3306/info_dev?autoreconnect=true
 flyway.user=admin
 flyway.password=admin
-flyway.schemas=info_dev
+flyway.schemas=COUSINFO_Dev
 flyway.repeatableSqlMigrationPrefix=RR
 flyway.target=3.1
